# aircraft-engine-anomaly-detection

./: .gitignore  LICENSE  README.md  main.py  main_config.yaml  pyproject.toml  requirements.txt  run.py  setup.py
configs/: main_config.yaml  owlvit_config.yaml  saa_config.yaml
notebooks/: evaluation.ipynb  mynotebook.ipynb  test.ipynb  test_prediction.ipynb
src/aircraft_anomaly_detection/: interfaces.py  postprocessing.py  preprocessing.py  viz_utils.py
src/aircraft_anomaly_detection/dataloader/: loader.py
src/aircraft_anomaly_detection/eval/: evaluator.py
src/aircraft_anomaly_detection/interface/: model.py
src/aircraft_anomaly_detection/models/: __init__.py  clip_predictor.py  dino.py  faster_rcnn.py  gemini.py  owlvit.py  sam.py
src/aircraft_anomaly_detection/models/saa/: __init__.py  clipseg.py  dino.py  owlvit.py  saa.py  sam.py  utils.py  widenet.py
src/aircraft_anomaly_detection/pipeline/: __init__.py  evaluate.py  infer.py  pipeline.py  pipeline_utils.py
src/aircraft_anomaly_detection/schemas/: __init__.py  data.py  prompt.py
src/dataloader/: __init__.py  loader.py
tests/: test.ipynb  test_saa.py
